--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
              <a href="#"><button class="ILIA-btn">ILIA</button></a>
             </div>
 
-            s<!-- Liens de navigation -->
+            <!-- Liens de navigation -->
             <div class="header-items accueil">
              <a href="index.html">Accueil</a>
             </div>
